Edited content for layouts

--- a/src/main/resources/templates/squad.hbs
+++ b/src/main/resources/templates/squad.hbs
@@ -24,6 +24,17 @@
         </form>
     </div>
 
+    <div class="container">
+
+        {{#each mySquads}}
+            <p>1</p>
+            <h3>Your rectangle's height is {{maxSize}}</h3>
+            <h3>Your rectangle's width is {{name}}</h3>
+            <h3>Your rectangle's width is {{fightingCause}}</h3>
+        {{/each}}
+    </div>
+
+
 
     <!--form.hbs.-->
 {{/partial}}
