--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -14,5 +14,36 @@
             </div>
         </div>
     </div>
+    <div class="container">
+        <form action="/squads" method="post">
+            <div class="form-group">
+                <label for="name">Squad Name</label>
+                <input id="name" name="name" class="form-control" type="text">
+            </div>
+            <div class="form-group">
+                <label for="maxSize">Maximum Size</label>
+                <input id="maxSize" name="maxSize" class="form-control" type="number">
+            </div>
+            <div class="form-group">
+                <label for="fightingCause">Fighting Cause</label>
+                <input id="fightingCause" name="fightingCause" class="form-control" type="text">
+            </div>
+            <div class="form-group">
+                <button type="submit" class="btn btn-primary btn-lg btn-block">Add</button>
+            </div>
+        </form>
+
+        <h1>Squad list!</h1>
+
+        {{#if squads}} <!--if posts exist, then -->
+            {{#each squads }} <!--loop-->
+                <p> {{maxSize}}</p>
+                <p> {{name}}</p>
+                <p> {{fightingCause}}</p>
+            {{/each}}
+        {{else}} <!--no posts!-->
+            <p>No posts!</p>
+        {{/if}}
+    </div>
 {{/partial}}
 {{> layout.hbs}}
