--- a/src/main/resources/templates/squad.hbs
+++ b/src/main/resources/templates/squad.hbs
@@ -1,13 +1,28 @@
 {{#partial "title" }}
-    Create a Custom Greeting!
+    Squads
 {{/partial}}
 <!--form.hbs.-->
 {{#partial "content"}}
+    <div class="container col-xxl-8 px-4 py-2">
+        <div class="row flex-lg-row-reverse align-items-center g-5">
+            <div class="col-10 col-sm-8 col-lg-6">
+                <img src="/images/pngegg.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+            </div>
+            <div class="col-lg-6">
+                <h1 class="display-5 fw-bold lh-1 mb-3">Responsive left-aligned hero with image</h1>
+                <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+                <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                    <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Primary</button>
+                    <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="container">
         <h5>Fill in your name and your friend's name to create your custom greeting!</h5>
-        <form action='/squadAddition'>
+        <form action='/squads' method="post">
             <div class="form-group">
-                <label for="name">Sqaud Name</label>
+                <label for="name">Squad Name</label>
                 <input id="name" name="name" class="form-control" type="text">
             </div>
             <div class="form-group">
@@ -23,15 +38,26 @@
             </div>
         </form>
     </div>
-
     <div class="container">
-
-        {{#each mySquads}}
-            <p>1</p>
-            <h3>Your rectangle's height is {{maxSize}}</h3>
-            <h3>Your rectangle's width is {{name}}</h3>
-            <h3>Your rectangle's width is {{fightingCause}}</h3>
-        {{/each}}
+           <h1>Squad list!</h1>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+    {{#if squads}} <!--if posts exist, then -->
+    {{#each squads }} <!--loop-->
+            <div class="col">
+                <div class="card shadow-sm">
+                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+                    <div class="card-body">
+                        <p class="card-text">{{maxSize}}</p>
+                        <p class="card-text">{{name}}</p>
+                        <p class="card-text">{fightingCause}}</p>
+                    </div>
+                </div>
+            </div>
+            {{/each}}
+        {{else}} <!--no posts!-->
+            <p>No posts!</p>
+        {{/if}}
+        </div>
     </div>
 
 
@@ -39,4 +65,4 @@
     <!--form.hbs.-->
 {{/partial}}
 
-{{> index.hbs}}
+{{> layout.hbs}}
