--- a/src/main/resources/templates/squad.hbs
+++ b/src/main/resources/templates/squad.hbs
@@ -20,7 +20,7 @@
     </div>
     <div class="container">
         <h5>Fill in your name and your friend's name to create your custom greeting!</h5>
-        <form action='/squads' method="post">
+        <form action='/squad' method="post">
             <div class="form-group">
                 <label for="name">Squad Name</label>
                 <input id="name" name="name" class="form-control" type="text">
@@ -49,7 +49,7 @@
                     <div class="card-body">
                         <p class="card-text">{{maxSize}}</p>
                         <p class="card-text">{{name}}</p>
-                        <p class="card-text">{fightingCause}}</p>
+                        <p class="card-text">{{fightingCause}}</p>
                     </div>
                 </div>
             </div>
