--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -45,5 +45,26 @@
             <p>No posts!</p>
         {{/if}}
     </div>
+    <div class="container">
+        <h1>Squad list!</h1>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+            {{#if squads}} <!--if posts exist, then -->
+                {{#each squads}} <!--loop-->
+                    <div class="col">
+                        <div class="card shadow-sm">
+                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+                            <div class="card-body">
+                                <p class="card-text">{{maxSize}}</p>
+                                <p class="card-text">{{name}}</p>
+                                <p class="card-text">{{fightingCause}}</p>
+                            </div>
+                        </div>
+                    </div>
+                {{/each}}
+            {{else}} <!--no posts!-->
+                <p>No posts!</p>
+            {{/if}}
+        </div>
+    </div>
 {{/partial}}
 {{> layout.hbs}}
