--- a/src/main/resources/templates/squad.hbs
+++ b/src/main/resources/templates/squad.hbs
@@ -1,7 +1,3 @@
-{{#partial "title" }}
-    Squads
-{{/partial}}
-<!--form.hbs.-->
 {{#partial "content"}}
     <div class="container col-xxl-8 px-4 py-2">
         <div class="row flex-lg-row-reverse align-items-center g-5">
@@ -19,8 +15,7 @@
         </div>
     </div>
     <div class="container">
-        <h5>Fill in your name and your friend's name to create your custom greeting!</h5>
-        <form action='/squad' method="post">
+        <form action="/squad" method="post">
             <div class="form-group">
                 <label for="name">Squad Name</label>
                 <input id="name" name="name" class="form-control" type="text">
@@ -37,32 +32,39 @@
                 <button type="submit" class="btn btn-primary btn-lg btn-block">Add</button>
             </div>
         </form>
-    </div>
-    <div class="container">
-           <h1>Squad list!</h1>
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-    {{#if squads}} <!--if posts exist, then -->
-    {{#each squads }} <!--loop-->
-            <div class="col">
-                <div class="card shadow-sm">
-                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-                    <div class="card-body">
-                        <p class="card-text">{{maxSize}}</p>
-                        <p class="card-text">{{name}}</p>
-                        <p class="card-text">{{fightingCause}}</p>
-                    </div>
-                </div>
-            </div>
+
+        <h1>Squad list!</h1>
+
+        {{#if squads}} <!--if posts exist, then -->
+            {{#each squads }} <!--loop-->
+                <p> {{maxSize}}</p>
+                <p> {{name}}</p>
+                <p> {{fightingCause}}</p>
             {{/each}}
         {{else}} <!--no posts!-->
             <p>No posts!</p>
         {{/if}}
+    </div>
+    <div class="container">
+        <h1>Squad list!</h1>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+            {{#if squads}} <!--if posts exist, then -->
+                {{#each squads}} <!--loop-->
+                    <div class="col">
+                        <div class="card shadow-sm">
+                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+                            <div class="card-body">
+                                <p class="card-text">{{maxSize}}</p>
+                                <p class="card-text">{{name}}</p>
+                                <p class="card-text">{{fightingCause}}</p>
+                            </div>
+                        </div>
+                    </div>
+                {{/each}}
+            {{else}} <!--no posts!-->
+                <p>No posts!</p>
+            {{/if}}
         </div>
     </div>
-
-
-
-    <!--form.hbs.-->
 {{/partial}}
-
 {{> layout.hbs}}
