--- a/src/main/resources/templates/squad.hbs
+++ b/src/main/resources/templates/squad.hbs
@@ -15,7 +15,7 @@
         </div>
     </div>
     <div class="container">
-        <form action="/squad" method="post">
+        <form action="/new" method="post">
             <div class="form-group">
                 <label for="name">Squad Name</label>
                 <input id="name" name="name" class="form-control" type="text">
@@ -32,20 +32,8 @@
                 <button type="submit" class="btn btn-primary btn-lg btn-block">Add</button>
             </div>
         </form>
-
-        <h1>Squad list!</h1>
-
-        {{#if squads}} <!--if posts exist, then -->
-            {{#each squads }} <!--loop-->
-                <p> {{maxSize}}</p>
-                <p> {{name}}</p>
-                <p> {{fightingCause}}</p>
-            {{/each}}
-        {{else}} <!--no posts!-->
-            <p>No posts!</p>
-        {{/if}}
     </div>
-    <div class="container">
+    <div class="container mb-5 pb-5">
         <h1>Squad list!</h1>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             {{#if squads}} <!--if posts exist, then -->
