--- a/src/main/resources/templates/success.hbs
+++ b/src/main/resources/templates/success.hbs
@@ -1,10 +1,12 @@
 {{#partial "content"}}
+    <div class="container">
     <div class="alert alert-success" role="alert">
     <h1>Success!</h1>
 
     Your blog post has been saved.
 
-    <a href="/">Go Back</a>
+    <a href="/squads">Go Back</a>
+    </div>
     </div>
 {{/partial}}
 
