--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -38,20 +38,12 @@
 </div>
 <!-- end inner template-->
 {{#block "footer"}}
-    <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark"  style="text-align: center">
-        <div class="container-fluid">
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <br/>
-                        <br/>        <br/>
-                        <br/>
-                    </li>
-                    <li class="nav-item"></li>
-                </ul>
-            </div>
+    <footer class="pt-3 mt-4 text-muted border-top navbar-dark" style="background-color: #000">
+        <div class="container">
+            © 2021
         </div>
-    </nav>
+    </footer>
+
 {{/block}}
 </body>
 </html>
