--- a/src/main/resources/templates/squad.hbs
+++ b/src/main/resources/templates/squad.hbs
@@ -14,14 +14,16 @@
             </div>
         </div>
     </div>
-    <div class="container mb-5 pb-5">
+    <div class="container mb-5 pb-5 mt-5">
         <h1>Squad list!</h1>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             {{#if squads}} <!--if posts exist, then -->
                 {{#each squads}} <!--loop-->
                     <div class="col">
                         <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img"
+                                 aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+                                <rect width="100%" height="100%" fill="#55595c"></rect></svg>
                             <div class="card-body">
                                 <p class="card-text">{{maxSize}}</p>
                                 <p class="card-text">{{name}}</p>
