--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -20,10 +20,11 @@
 
             <div class="col-md-3 text-end">
                 <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                    <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
-                    <li><a href="#" class="nav-link px-2 link-dark">Features</a></li>
-                    <li><a href="#" class="nav-link px-2 link-dark">Pricing</a></li>
-                    <li><a href="#" class="nav-link px-2 link-dark">FAQs</a></li>
+                    <li><a href="/" class="nav-link px-2 link-secondary">Home</a></li>
+                    <li><a href="#" class="nav-link px-2 link-dark">Heros</a></li>
+                    <li><a href="#" class="nav-link px-2 link-dark">Add Hero</a></li>
+                    <li><a href="/squads" class="nav-link px-2 link-dark">Squads</a></li>
+                    <li><a href="/addSquads" class="nav-link px-2 link-dark">Add Squad</a></li>
                 </ul>
             </div>
         </header>
