Aded success hero hbs file

--- a/src/main/resources/templates/success.hbs
+++ b/src/main/resources/templates/success.hbs
@@ -3,7 +3,7 @@
     <div class="alert alert-success" role="alert">
     <h1>Success!</h1>
 
-    Your blog post has been saved.
+    Your Squad has been saved.
 
     <a href="/squads">Go Back</a>
     </div>
