added the add hero form

--- a/src/main/resources/templates/hero.hbs
+++ b/src/main/resources/templates/hero.hbs
@@ -1,7 +1,7 @@
 {{#partial "content"}}
 
     <div class="container mb-5 pb-5 mt-5">
-        <h1 class="display-5">Hero list!</h1>
+        <h1 class="display-5">Hero list</h1>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             {{#if heros}} <!--if posts exist, then -->
                 {{#each heros}} <!--loop-->
