added the add hero form

--- a/src/main/resources/templates/addHero.hbs
+++ b/src/main/resources/templates/addHero.hbs
@@ -8,7 +8,7 @@
                 <form action="/newHero" method="post">
                     <div class="form-group mt-3">
                         <p class="card-text">Fill in the following form to add a new hero</p>
-                        <label for="name">Squad Name</label>
+                        <label for="name">Hero Name</label>
                         <input id="name" name="name" class="form-control" type="text">
                     </div>
                     <div class="form-group mt-3">
@@ -17,7 +17,7 @@
                     </div>
                     <div class="form-group mt-3">
                         <label for="specialPowers">Special Powers</label>
-                        <input id="specialPowers" name="specialPoeers" class="form-control" type="text">
+                        <input id="specialPowers" name="specialPowers" class="form-control" type="text">
                     </div>
                     <div class="form-group mt-3">
                         <label for="weakness">Weakness</label>
