--- a/src/main/resources/templates/hero.hbs
+++ b/src/main/resources/templates/hero.hbs
@@ -14,7 +14,7 @@
                                 <p class="card-text">{{name}}</p>
                                 <p class="card-text">{{age}}</p>
                                 <p class="card-text">{{specialPowers}}</p>
-                                <p class="card-text">{{weakeness}}</p>
+                                <p class="card-text">{{weakness}}</p>
                             </div>
                         </div>
                     </div>
