--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -1,66 +1,54 @@
 {{#partial "content"}}
-    <div class="container col-xxl-8 px-4 py-2">
-        <div class="row flex-lg-row-reverse align-items-center g-5">
-            <div class="col-10 col-sm-8 col-lg-6">
-                <img src="/images/pngegg.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
-            </div>
-            <div class="col-lg-6">
-                <h1 class="display-5 fw-bold lh-1 mb-3">Responsive left-aligned hero with image</h1>
-                <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
-                <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                    <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Primary</button>
-                    <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button>
+    <div class="container pt-5 pb-5 mt-5">
+    <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+        <div class="col">
+            <div class="card mb-5 rounded-4 shadow-sm">
+                <div class="card-header py-3">
+                    <h4 class="my-0 fw-normal">Hero Details Required</h4>
+                </div>
+                <div class="card-body">
+                    <ul class="list-unstyled mt-3 mb-4">
+                        <li>Name</li>
+                        <li>Age</li>
+                        <li>Special Powers</li>
+                        <li>Weakness</li>
+                    </ul>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="container mt-5 mb-5">
-        <div class="card mb-4 rounded-3 shadow-sm">
-            <div class="card-header py-3">
-                <h4 class="my-0 fw-normal">Add New Squad</h4>
-            </div>
-            <div class="card-body">
-                <form action="/new" method="post">
-                    <div class="form-group mt-3">
-                        <p class="card-text">Fill in the following form to add a new squad</p>
-                        <label for="name">Squad Name</label>
-                        <input id="name" name="name" class="form-control" type="text">
-                    </div>
-                    <div class="form-group mt-3">
-                        <label for="maxSize">Maximum Size</label>
-                        <input id="maxSize" name="maxSize" class="form-control" type="number">
-                    </div>
-                    <div class="form-group mt-3">
-                        <label for="fightingCause">Fighting Cause</label>
-                        <input id="fightingCause" name="fightingCause" class="form-control" type="text">
-                    </div>
-                    <div class="form-group mt-3">
-                        <button type="submit" class="btn btn-primary btn-lg btn-block">Save Squad</button>
-                    </div>
-                </form>
+        <div class="col">
+            <div class="card mb-5 rounded-4 shadow-sm">
+                <div class="card-header py-3">
+                    <h4 class="my-0 fw-normal">Squad Details Required</h4>
+                </div>
+                <div class="card-body">
+                    <ul class="list-unstyled mt-3 mb-4">
+                        <li>Name</li>
+                        <li>Max number of Heros required</li>
+                        <li>Fighting Cause</li>
+                        <li>Help center access</li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="container mb-5 pb-5">
-        <h1>Squad list!</h1>
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-            {{#if squads}} <!--if posts exist, then -->
-                {{#each squads}} <!--loop-->
-                    <div class="col">
-                        <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-                            <div class="card-body">
-                                <p class="card-text">{{maxSize}}</p>
-                                <p class="card-text">{{name}}</p>
-                                <p class="card-text">{{fightingCause}}</p>
-                            </div>
-                        </div>
-                    </div>
-                {{/each}}
-            {{else}} <!--no posts!-->
-                <p>No posts!</p>
-            {{/if}}
+        <div class="col">
+            <div class="card mb-5 rounded-4 shadow-sm">
+                <div class="card-header py-3">
+                    <h4 class="my-0 fw-normal">Hero Squad Details</h4>
+                </div>
+                <div class="card-body">
+                    <ul class="list-unstyled mt-3 mb-4">
+                        <li>Hero</li>
+                        <p>+</p>
+                        <li>Squad</li>
+
+                    </ul>
+                </div>
+            </div>
         </div>
+
     </div>
+    </div>
+
 {{/partial}}
 {{> layout.hbs}}
