--- a/src/main/resources/templates/squad.hbs
+++ b/src/main/resources/templates/squad.hbs
@@ -1,5 +1,9 @@
 {{#partial "content"}}
-
+    <style>
+        .bold{
+            font-weight: bold;
+        }
+    </style>
     <div class="container mb-5 pb-5 mt-5">
         <h1 class="display-5">Squad list!</h1>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
@@ -11,9 +15,9 @@
                                  aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
                                 <rect width="100%" height="100%" fill="#55595c"></rect></svg>
                             <div class="card-body">
-                                <p class="card-text">{{maxSize}}</p>
-                                <p class="card-text">{{name}}</p>
-                                <p class="card-text">{{fightingCause}}</p>
+                                <p class="card-text"><span class="bold">Maximum Size: </span>{{maxSize}}</p>
+                                <p class="card-text"><span class="bold">Name: </span>{{name}}</p>
+                                <p class="card-text"><span class="bold">Fighting Cause: </span>{{fightingCause}}</p>
                             </div>
                         </div>
                     </div>
